[fix] Fix invisible modal overlay all elements and block elements' click action

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -13,11 +13,10 @@
   bottom: 0;
   left: 0;
   background-color: rgba(black, 0.5);
-  opacity: 0;
-  transition: opacity 0.3s;
+  visibility: hidden;
 
   &-show {
-    opacity: 1;
+    visibility: visible;
   }
 
   &__wrapper {
